--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,57 +1,40 @@
-name: Build & publish drill artifacts
+name: Build & publish drill-hook artifacts
 on:
   push:
     branches:
       - master
 
 jobs:
-  check_for_win:
+  build_macos_distr:
+    name: (Macos platform)
+    runs-on: macOS-latest
+    steps:
+      - uses: actions/checkout@v1
+      - name: publish
+        run: gradle --no-daemon publish
+        env:
+          BINTRAY_USER: ${{ secrets.BINTRAY_USER }}
+          BINTRAY_API_KEY: ${{ secrets.BINTRAY_API_KEY }}
+          GRADLE_OPTS: -Dorg.gradle.daemon=false -Dorg.gradle.jvmargs=-Xmx4096m
+
+  build_windows_distr:
     name: (Windows platform)
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v1
-      - name: Gradle Cache
-        id: cache-gradle
-        uses: actions/cache@v1
-        with:
-          path: ~/.gradle/caches
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle.kts') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
-      - uses: actions/checkout@v1
-      - name: Konan Cache
-        id: cache-konan
-        uses: actions/cache@v1
-        with:
-          path: ~/.konan
-          key: ${{ runner.os }}-konan-${{ hashFiles('**/*.gradle.kts') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
-      - name: Build
-        run: |
-          gradle build
-  check_for_linux:
+      - name: publish
+        run: gradle publishMingwX64PublicationToMavenRepository
+        env:
+          BINTRAY_USER: ${{ secrets.BINTRAY_USER }}
+          BINTRAY_API_KEY: ${{ secrets.BINTRAY_API_KEY }}
+  build_linux_distr:
     name: (LINUX platform)
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - name: Gradle Cache
-        id: cache-gradle
-        uses: actions/cache@v1
-        with:
-          path: ~/.gradle/caches
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle.kts') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
-      - uses: actions/checkout@v1
-      - name: Konan Cache
-        id: cache-konan
-        uses: actions/cache@v1
-        with:
-          path: ~/.konan
-          key: ${{ runner.os }}-konan-${{ hashFiles('**/*.gradle.kts') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
-      - name: Build
-        run: |
-          gradle build
+      - name: publish
+        run: gradle publishLinuxX64PublicationToMavenRepository
+        env:
+          BINTRAY_USER: ${{ secrets.BINTRAY_USER }}
+          BINTRAY_API_KEY: ${{ secrets.BINTRAY_API_KEY }}
+
