--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,5 @@
 kotlin.code.style=official
 kotlin.native.ignoreDisabledTargets=true
+group=com.epam.drill.hook
+version=1.0.0
+org.gradle.jvmargs=-Xmx4096m
