--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,10 @@
 kotlin.code.style=official
 kotlin.native.ignoreDisabledTargets=true
 group=com.epam.drill.hook
-version=1.3.0
+version=1.4.0
 org.gradle.jvmargs=-Xmx4096m
+
+kotlinVersion=1.4.21
+drillGradlePluginVersion=0.17.0
+atomicfuVersion=0.14.4
+kxCollectionsVersion=0.3.3
