EPMDJ-8596 Update to Kotlin 1.5
also updated gradle to 7.2, remove cross compilation plugin and add license

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,17 @@
 kotlin.code.style=official
 kotlin.native.ignoreDisabledTargets=true
 group=com.epam.drill.hook
-version=1.4.1
+version=1.5.0
 org.gradle.jvmargs=-Xmx4096m
 
-kotlinVersion=1.4.21
-drillGradlePluginVersion=0.17.0
-atomicfuVersion=0.14.4
-kxCollectionsVersion=0.3.3
+kotlinVersion=1.5.31
+atomicfuVersion=0.16.3
+kxCollectionsVersion=0.3.4
+licenseVersion=0.16.1
+
+scriptUrl=https://raw.githubusercontent.com/Drill4J/build-scripts/master
+
+#https://kotlinlang.org/docs/mpp-share-on-platforms.html
+kotlin.mpp.enableGranularSourceSetsMetadata=true
+kotlin.native.enableDependencyPropagation=false
+kotlin.mpp.enableCInteropCommonization=true
